Version 4.4.1
- Added a warning for C functions with mismatched parameters (it used to silently accept this)
- Added "." character for PRINT USING in BASIC
- Allowed empty FOR loops in BASIC
- Fixed a number of problems in C struct initialization
- Fixed printing floats in C when --fixedreal is given
- Fixed BASIC FOR loops with negative floating point steps

Version 4.4.0
- Added simplified designated initializers (like { .x=1 }) for structs and arrays
- Added float_t and double_t to math.h
- Added fseek() and ftell() stdio functions
- Added Spin2 RECV pointer
- Fixed a hang due to multiply processing modules
- Fixed djnz out of range on P2
- Fixed \0 inside C strings
- Fixed x[n].method() type calls in Spin2
- Fixed x[n].[a] method reference lookups in Spin2
- Fixed some bugs in structure passing/return
- Fixed incorrect FOR loops using unsigned integers if counting down to 0 or up to MAXINT
- Fixed order of declarations for C enums
- Fixed nested initializers in C
- Improved warnings about missing # in PASM
- Made SEND pointer per-COG
- Made some local Spin arrays be held in registers
- Made SPR keyword be Spin1 only (in Spin2 it is "REG")
- Modified inline assembly to allow for accessing array variables
- Reduced the delay for SD card communication to speed up FatFs
- Save/restore SEND pointer in Spin2 if it is modified by a function

Version 4.3.1
- Added HUBSET(), POLLATN(), WAITATN()
- Fix void function calls in SEND
- Fixed some debug function formatting

Version 4.3.0
- P2 API Change: use call/ret instead of calla/reta
- Added finer-grained control over optimizations
- Added per-function control over optimizations
- Added preliminary implementation of DEBUG() for Spin2
- Fixed some bugs in cse and loop optimizations
- Fixed byref parameters in BASIC template functions
- Improved dead code removal

Version 4.2.8
- Added -Werror flag to turn warnings into errors
- Fixed an optimizer bug which could incorrectly delete some conditional statements